@@ -8,7 +8,7 @@ clients or servers.
 
 VERSION
 
-This is Atlas-C++ 0.4.5, the latest stable incarnation of Atlas-C++ as
+This is Atlas-C++ 0.4.6, the latest stable incarnation of Atlas-C++ as
 of 2002-07-20. The 0.4.x branch will contain NO API CHANGES. The 0.5.x
 branch is completely experimental and may not be easy to track. Any
 changes affecting the API should go into 0.5.x, as should any features
