@@ -32,7 +32,7 @@ clients or servers.
 %setup -q
 
 %build
-CXXFLAGS=$RPM_OPT_FLAGS ./configure --prefix=%{prefix}
+CXXFLAGS=$RPM_OPT_FLAGS ./configure --enable-static --prefix=%{prefix}
 make
 
 %install
@@ -52,5 +52,6 @@ rm -rf $RPM_BUILD_ROOT
 %{prefix}/bin/atlas-config
 %{prefix}/lib/libAtlas*.so
 %{prefix}/lib/libAtlas*.a
-%{prefix}/include/Atlas
+%{prefix}/lib/pkgconfig
+%{prefix}/include/Atlas-C++-0.4
 %{prefix}/share/aclocal/atlas.m4
