@@ -10,7 +10,7 @@ AC_SUBST(ATLAS_VERSION)
 # libtool versioning
 # LT_RELEASE=$MAJOR_VERSION.$MINOR_VERSION
 ATLAS_CURRENT=1
-ATLAS_REVISION=2
+ATLAS_REVISION=3
 ATLAS_AGE=0
 
 ATLAS_INTERFACE_VERSION_INFO=$ATLAS_CURRENT:$ATLAS_REVISION:$ATLAS_AGE
