@@ -1,3 +1,7 @@
+2003-04-17  Al Riddoch  <alriddoch@zepler.org>
+
+	* Atlas-C++ 0.4.6 released.
+
 2002-07-20  Al Riddoch  <alriddoch@zepler.org>
 
 	* Atlas-C++ 0.4.5 released.
